--- a/app/src/main/res/layout/activity_segmentation.xml
+++ b/app/src/main/res/layout/activity_segmentation.xml
@@ -14,41 +14,38 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/segmentation_task_name" />
 
-    <ScrollView
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/segmentationImage"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/segmentationToolbar">
+        android:layout_marginStart="@dimen/side_margin"
+        android:layout_marginEnd="@dimen/side_margin"
+        android:layout_marginBottom="@dimen/standart"
+        android:contentDescription="@string/current_image_desc"
+        android:src="@mipmap/ic_launcher"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/segmentationToolbar"
+        app:layout_constraintBottom_toTopOf="@id/applySegmentationButton"/>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/standart">
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/applySegmentationButton"
+        style="@style/Theme.PhotoEditor.Button.Accent"
+        android:layout_marginBottom="@dimen/half"
+        android:text="@string/apply_button"
+        app:icon="@drawable/ic_check"
+        app:layout_constraintStart_toStartOf="@id/segmentationImage"
+        app:layout_constraintEnd_toEndOf="@+id/segmentationImage"
+        app:layout_constraintBottom_toTopOf="@+id/saveButton"/>
 
-            <ImageView
-                android:id="@+id/segmentationImage"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/side_margin"
-                android:layout_marginEnd="@dimen/side_margin"
-                android:contentDescription="@string/current_image_desc"
-                android:src="@mipmap/ic_launcher"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/applySegmentationButton"
-                style="@style/Theme.PhotoEditor.Button.Accent"
-                android:layout_marginTop="@dimen/standart"
-                android:text="@string/apply_button"
-                app:icon="@drawable/ic_check"
-                app:layout_constraintStart_toStartOf="@id/segmentationImage"
-                app:layout_constraintEnd_toEndOf="@+id/segmentationImage"
-                app:layout_constraintTop_toBottomOf="@+id/segmentationImage"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/saveButton"
+        style="@style/Theme.PhotoEditor.Button"
+        android:text="@string/save_picture_button"
+        app:icon="@drawable/ic_folder"
+        android:layout_marginBottom="@dimen/standart"
+        app:layout_constraintStart_toStartOf="@id/applySegmentationButton"
+        app:layout_constraintEnd_toEndOf="@+id/applySegmentationButton"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
