--- a/app/src/main/res/layout/activity_rotation.xml
+++ b/app/src/main/res/layout/activity_rotation.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RotationActivity">
+    tools:context=".effect_activities.RotationActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/rotationToolbar"
