--- a/app/src/main/res/layout/activity_splines.xml
+++ b/app/src/main/res/layout/activity_splines.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="@string/splines_task_name" />
 
-    <com.example.photoeditor.SplinesView
+    <com.example.photoeditor.algorithms.SplinesView
         android:id="@+id/splinesView"
         android:layout_width="0dp"
         android:layout_height="0dp"
